@@ -2,6 +2,7 @@
 
 == New features
 * Support for dynamically pluggable formatters (#99 Joseph Wilk)
+* --verbose mode to see ruby files and feature files loaded by Cucumber (#106 Joseph Wilk)
 
 == Bugfixes
 
